# ai_cli

./: Cargo.toml  LICENSE  README.md
src/: console.rs  main.rs
