[package]
name = "ai_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive", "env"] }
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
