[package]
name = "ai_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive", "env"] }
openai-api-rs = "6.0.6"
phf = { version = "0.11.3", features = ["macros", "phf_macros", "serde"] }
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
ratatui = "0.20"
crossterm = "0.26"
